<resources>
    <string name="app_name">V2EX</string>
    <string name="hello_world">Hello World</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="it_is_avatar">Avatar</string>
    <string name="menu_refresh">Refresh</string>
    <string name="error_timeout">Connection timed out</string>
    <string name="error_auth_failure">Login required</string>
    <string name="error_network">Network error</string>
    <string name="error_parser">Parsing error</string>
    <string name="title_activity_details">Topic Details</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="node">Node</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reply_time">Reply time</string>
    <string name="row">Floor</string>
    <string name="all_replies_of_user">All replies of %s</string>
    <string name="reply">Reply</string>
    <string name="title_activity_login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="authenticating">Authenticating...</string>
    <string name="title_activity_nav_drawer">Navigation Drawer</string>
    <string name="tab_title_latest">New</string>
    <string name="tab_title_top10">Top 10</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="register_tip">New user? Click here to register</string>
    <string name="feature">Feature</string>
    <string name="communicate">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate app</string>
    <string name="other">Other</string>
    <string name="general">General</string>
    <string name="just_now">Just now</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string-array name="period_string">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>3 Hours</item>
    </string-array>
    <string-array name="period_int">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
    </string-array>
    <string-array name="text_size">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="text_size_string">
        <item>Follow System</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Super Large</item>
    </string-array>
    <string-array name="night_mode_string">
        <item>Dark Mode</item>
        <item>Light Mode</item>
        <item>System Default</item>
    </string-array>
    <string name="follow_system">Follow System</string>
    <string-array name="language_string" translatable="false">
        <item>@string/follow_system</item>
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="language_value" translatable="false">
        <item>default</item>
        <item>en</item>
        <item>zh_CN</item>
        <item>zh_TW</item>
    </string-array>
    <string-array name="night_mode">
        <item>2</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
    <string-array name="search_option" >
        <item>Latest</item>
        <item>Earliest</item>
        <item>Hottest</item>
    </string-array>
    <string name="title_activity_node">Node</string>
    <string name="node_image" translatable="false">node image</string>
    <string name="search_hint">Search …</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="share_app">Share app</string>
    <string name="share_to">Share to</string>
    <string name="feedback_hint">Please input your idea or recommendation below.\n</string>
    <string name="send_email">Send feedback mail…</string>
    <string name="feedback_subject" translatable="false">Feedback for v2ex-simple</string>
    <string name="email">Email</string>
    <string name="thanks">Thanks</string>
    <string name="show_thanks">♥ %d</string>
    <string name="profile">profile</string>
    <string name="log_in_v2ex">Log in V2EX</string>
    <string name="app_simple_name">V2EX</string>
    <string name="created_on">Created on</string>
    <string name="introduction">Introduction</string>
    <string name="the_n_member">the %s member</string>
    <string name="topic_number">Topic num %d</string>
    <string name="daily_check">Daily check</string>
    <string name="logout">Logout</string>
    <string name="all_nodes">All nodes</string>
    <string name="post_reply">send reply</string>
    <string name="user">User</string>
    <string name="choose_node">Please choose node</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="copy_content">Copy content</string>
    <string name="create_topic">Create topic</string>
    <string name="you_have_notifications">it is %d unread message</string>
    <string name="favor">Favor</string>
    <string name="my_follow">My follows</string>
    <string name="unFavor">Unfavor</string>
    <string name="new_topic">New topic</string>
    <string name="follow">Follow</string>
    <string name="block">Block</string>
    <string name="no_more_data">no more data</string>
    <string name="verify_code">code</string>
    <string name="indicator">indicator</string>
    <string name="show_user_all_reply">Show user all replies</string>
    <string name="already_thank">thanked</string>
    <string name="ignore">Ignore topic</string>
    <string name="already_ignore">Cancel ignore</string>
    <string name="google_login">Sign in With Google</string>
    <string name="tab_setting">HomePage tab setting</string>
    <string name="need_at_least_one">You need remain at least one tab</string>
    <string name="show_area">Show area</string>
    <string name="hide_area">Hide area</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save">Save</string>
    <string name="search">Search</string>
    <string name="there_is_no_app_store">No App Store found in your phone</string>
    <string name="font_size">Font size</string>
    <string name="swipe_to_switch_topic">Swipe to switch topic</string>
    <string name="dark_mode">Dark mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="version">Version</string>
    <string name="iknow">I know</string>
    <string name="search_api_tips">Search API Tips</string>
    <string name="tips_tab_setting">Tips:\nIf logged in , it will show Node that you favored. Long press to reorder</string>
    <string name="light_mode">Light mode</string>
    <string name="use_device_setting">System default</string>
    <string name="tips">Tips</string>
    <string name="not_login_tips">Please log in to continue</string>
    <string name="show_conversation">Show conversations</string>
    <string name="personalization">Personalization</string>
    <string name="message">Message</string>
    <string name="unread_message_notification">Unread message notification</string>
    <string name="notification_period">Notification period</string>
    <string name="get_message_background">Fetch notification when background</string>
    <string name="add_row_in_reply">Add row in reply</string>
    <string name="format_user_n">Format: @user #n</string>
    <string name="format_user">Format: @user</string>
    <string name="hide_reply">Hide</string>
    <string name="report_abuse">Report</string>
    <string name="language">Language</string>
    <string name="please_input_content">Input topic content…</string>
    <string name="topic_title">Topic title</string>
    <string name="please_input_key_to_search">Input keywords to search</string>
    <string name="theme_background">Theme</string>
    <string name="pagenummode">Page number mode</string>
    <string name="show_pagenum_on">Show page number in favor and user page</string>
    <string name="show_pagenum_off">Hide page number in favor and user page</string>
    <string name="cancel_block">Unblock</string>
    <string name="unfollow">Unfollow</string>
    <string name="sort_mode">Sort mode</string>
    <string name="gte">Earliest posting</string>
    <string name="lte">Latest posting</string>
    <string name="newest">Newest</string>
    <string name="hot">Hot</string>
    <string name="dark_mode_darker">More Darker Mode</string>
    <string name="normal_dark">Normal Dark</string>
    <string name="super_dark">Super Dark</string>
    <string name="ignore_node">Ignore Node</string>
    <string name="already_ignore_node">Unignore Node</string>
    <string name="two_step_verification">Two-step Verification</string>
    <string name="input_two_step_code">Please enter your two-step verification code</string>
    <string name="verify">Verify</string>
    <string name="username_or_email">Username / Email</string>
    <string name="no_account_signup">No account? Sign up</string>
    <string name="login_success">Login success</string>
    <string name="publish_success">Publish success</string>
    <string name="report_reply_title">Report reply: %s</string>
    <string name="report_reply_content">Reply ID: %1$s\nAuthor: %2$s\nTopic: %3$s</string>
    <string name="report_topic_title">Report topic: %s</string>
    <string name="report_topic_content">Topic: %1$s\nAuthor: %2$s\nReason: %3$s</string>
    <string name="checkin_success">Daily check-in success</string>
    <string name="checkin_already">Already checked in, come back tomorrow</string>
    <string name="parsing_error_once">Parsing error, cannot find \'once\'</string>
    <string name="checkin_failed">Check-in failed: %s</string>
    <string name="need_login_first">Need login first</string>
    <string-array name="j" translatable="false">
        <item>Day</item>
        <item>None</item>
        <item>Self</item>
        <item>ChatGPT</item>
        <item>AI</item>
        <item>RELAX</item>
    </string-array>
    <string name="search_sort_time">Time</string>
    <string name="search_sort_relevance">Relevance</string>
    <string name="search_order_newest_first">Newest First</string>
    <string name="search_order_oldest_first">Oldest First</string>
    <string name="no_content_placeholder">No content</string>
    <string name="search_v2ex_hint">Search V2EX</string>
    <string name="contact_author">Contact author</string>
    <string name="email_subject_feedback">V2EX Simple Feedback</string>
    <string name="no_email_client">No email client found</string>
    <string name="logout_success">Logged out successfully</string>
    <string name="error_empty_title_content">Title and content cannot be empty</string>
    <string name="error_choose_node">Please select a node</string>
    <string name="error_post_failed_once">Post failed, could not get once token</string>
    <string name="search_nodes_placeholder">Search nodes...</string>
    <string name="report_reason_title">Please select a reason for reporting</string>
    <string-array name="report_reasons">
        <item>Spam/Ads</item>
        <item>Harassment</item>
        <item>Copyright infringement</item>
        <item>Unfriendly content</item>
        <item>Other</item>
    </string-array>
    <string name="post_reply_hint">Post a reply…</string>
    <string name="more">More</string>
    <string name="drawer_click_to_login">Click to login</string>
    <string name="drawer_daily_check">Daily check</string>
    <string name="drawer_all_nodes">All nodes</string>
</resources>