<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        android:order="10"
        android:title="@string/personalization"
        android:key="group_custom">
        <SwitchPreference
            android:title="@string/add_row_in_reply"
            android:key="pref_add_row"
            android:defaultValue="false"
            android:summaryOn="@string/format_user_n"
            android:summaryOff="@string/format_user" />

        <SwitchPreference
            android:title="@string/pagenummode"
            android:key="pref_page_num"
            android:defaultValue="false"
            android:summaryOn="@string/show_pagenum_on"
            android:summaryOff="@string/show_pagenum_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:order="20"
        android:title="@string/notification"
        android:key="group_msg">
        <SwitchPreference
            android:title="@string/unread_message_notification"
            android:key="pref_msg"
            android:defaultValue="true"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />
        <SwitchPreference
            android:key="pref_background_msg"
            android:title="@string/get_message_background"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            android:defaultValue="false" />
        <ListPreference
            android:defaultValue="900"
            android:entries="@array/period_string"
            android:entryValues="@array/period_int"
            app:useSimpleSummaryProvider="true"
            android:key="pref_msg_period"
            android:title="@string/notification_period" />
    </PreferenceCategory>

    <PreferenceCategory
        android:order="30"
        android:title="@string/user"
        android:key="group_user">

        <Preference
            android:key="pref_logout"
            android:title="@string/logout"/>
    </PreferenceCategory>
</PreferenceScreen>