<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_nav_main"
        android:checkableBehavior="single"
        android:orderInCategory="90">

        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/daily_check" />
        <item
            android:id="@+id/nav_node"
            android:icon="@drawable/ic_zoom_out_map_black_24dp"
            android:title="@string/all_nodes" />
        <item
            android:id="@+id/nav_favor"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/my_follow" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_testNotify"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Test Notify " />
        <item
            android:id="@+id/nav_testMenu2"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="nav_testMenu2 " />

    </group>

    <group
        android:id="@+id/group_nav_setting"
        android:orderInCategory="95">

        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share_app"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />

    </group>

</menu>