<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_communication"
        android:title="@string/general">
        <SwitchPreference

            android:defaultValue="false"
            android:key="pref_wifi"
            android:summaryOff="任何情况下加载图片"
            android:summaryOn="仅在Wifi下加载图片"
            android:title="节省流量" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_http_mode"
            android:summaryOff="now use web"
            android:summaryOn="now use api"
            android:title="Switch http mode" />


    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/other">
        <Preference
            android:key="pref_rates"
            android:title="@string/rate" />
    </PreferenceCategory>
    <Preference
        android:key="pref_logout"
        android:title="@string/logout"
        android:order="0" />


</PreferenceScreen>