<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="im.fdx.v2ex.ui.DetailsActivity">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="99"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_share"
        android:orderInCategory="98"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_open_in_browser"
        android:orderInCategory="97"
        android:title="@string/menu_open_in_browser"
        app:showAsAction="never"/>

</menu>
