<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="1dp"
    >


    <im.fdx.v2ex.utils.MyNetworkCircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/md_avatar"
        android:layout_height="@dimen/md_avatar"
        android:id="@+id/reply_avatar"
        android:src="@drawable/ic_person_black_48dp"
        app:civ_border_width="0dp"
        app:civ_border_color="#FFFFFFFF"
        android:layout_marginTop="9dp"
        android:layout_marginStart="@dimen/md_left_margin"
        android:contentDescription="@string/it_is_avatar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:id="@+id/tvReplyContent"
        android:textIsSelectable="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/md_left_margin"
        android:layout_marginBottom="9dp"
        android:layout_below="@+id/tvReplier"
        android:layout_alignStart="@+id/tvReplier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textStyle="bold"
        android:id="@+id/tvReplier"
        android:textColor="#333333"
        android:layout_alignTop="@+id/reply_avatar"
        android:layout_toEndOf="@+id/reply_avatar"
        android:layout_marginStart="@dimen/md_left_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply_time"
        android:id="@+id/tvReplyTime"
        android:layout_marginStart="@dimen/md_left_margin"
        android:layout_alignBaseline="@+id/tvReplier"
        android:layout_alignTop="@+id/reply_avatar"
        android:layout_toEndOf="@+id/tvReplier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row"
        android:id="@+id/tvRow"
        android:layout_alignTop="@+id/reply_avatar"
        android:layout_alignEnd="@+id/tvReplyContent" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_alignStart="@+id/tvReplier"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvReplyContent" />

</RelativeLayout>