<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_text_view"
    android:layout_marginTop="1dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/md_left_margin"
            android:layout_marginLeft="@dimen/md_left_margin"
            android:layout_marginRight="@dimen/md_left_margin"
            android:layout_marginStart="@dimen/md_left_margin"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/title_color"
            android:textSize="18dp"

            />


        <TextView
            android:id="@+id/tv_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_avatar_profile"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_toEndOf="@+id/tv_reply_number"
            android:layout_toRightOf="@+id/tv_reply_number"
            android:text="@string/reply_time"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_reply_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_avatar_profile"
            android:layout_alignLeft="@+id/tv_author"
            android:layout_alignStart="@+id/tv_author"
            android:text="@string/reply"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_node"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_created"
            android:layout_alignEnd="@+id/tv_title"
            android:background="@drawable/radio_with_color"
            android:elevation="2dp"
            android:paddingBottom="2dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="2dp"
            android:text="@string/node" />


        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_avatar_profile"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/iv_avatar_profile"
            android:layout_toRightOf="@+id/iv_avatar_profile"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/author"
            android:textColor="@color/content_font_color"
            android:textStyle="normal|bold" />

        <im.fdx.v2ex.view.CircleVImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_avatar_profile"
            android:layout_width="@dimen/md_avatar_size"
            android:layout_height="@dimen/md_avatar_size"
            android:layout_alignStart="@+id/tv_title"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/it_is_avatar"
            android:src="@drawable/ic_profile"
            app:civ_border_width="0dp" />

        <im.fdx.v2ex.view.GoodTextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tv_node"
            android:layout_alignStart="@+id/iv_avatar_profile"
            android:layout_below="@+id/tv_created"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:textColor="@color/content_font_color"
            android:textSize="@dimen/content_font_size"
            tools:text="@string/content" />

    </RelativeLayout>
</android.support.v7.widget.CardView>