<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                tools:ignore="UnusedAttribute">


    <im.fdx.v2ex.utils.MyNetworkCircleImageView
        android:id="@+id/reply_avatar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="@dimen/md_avatar_size"
        android:layout_height="@dimen/md_avatar_size"
        android:layout_marginLeft="@dimen/md_left_margin"
        android:layout_marginStart="@dimen/md_left_margin"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/it_is_avatar"
        android:src="@drawable/ic_person_outline_black_48dp"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="0dp"/>

    <TextView
        android:id="@+id/tvReplyContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvReplier"
        android:layout_alignStart="@+id/tvReplier"
        android:layout_below="@+id/tvReplier"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="@dimen/md_left_margin"
        android:layout_marginRight="@dimen/md_left_margin"
        android:layout_marginTop="6dp"
        android:text="@string/content"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/tvReplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reply_avatar"
        android:layout_marginLeft="@dimen/md_left_margin"
        android:layout_marginStart="@dimen/md_left_margin"
        android:layout_toEndOf="@+id/reply_avatar"
        android:layout_toRightOf="@+id/reply_avatar"
        android:text="@string/author"
        android:textColor="#333333"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvReplyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvReplier"
        android:layout_alignTop="@+id/reply_avatar"
        android:layout_marginLeft="@dimen/md_left_margin"
        android:layout_marginStart="@dimen/md_left_margin"
        android:layout_toEndOf="@+id/tvReplier"
        android:layout_toRightOf="@+id/tvReplier"
        android:text="@string/reply_time"
        />

    <TextView
        android:id="@+id/tvRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvReplyContent"
        android:layout_alignRight="@+id/tvReplyContent"
        android:layout_alignTop="@+id/reply_avatar"
        android:text="@string/row"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignLeft="@+id/tvReplier"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/tvReplier"
        android:layout_below="@id/tvReplyContent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvReplyTime"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/tvReplyTime"
        android:layout_toRightOf="@+id/tvReplyTime"
        android:text="@string/tanks"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>